Related fdo#87789: groups should appear like views and not like tables

Cherry-picked from 84e3c5acb07937a073fedbe3d5389fc72123923a

Change-Id: I4f8d7e2bec006e6d0a0041e2145aa0920f64aa57
Reviewed-on: https://gerrit.libreoffice.org/13699
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>
(cherry picked from commit 8656ea837f75b199aefab727ccb77f4ae209037c)