connectivity/source/drivers/mork/MDatabaseMetaDataHelper.cxx
@@ -106,8 +106,15 @@ bool MDatabaseMetaDataHelper::getTables( OConnection* _pCon,
 
             SAL_INFO("connectivity.mork", "TableName: " << aTableName);
 
-            aRow.push_back( new ORowSetValueDecorator( aTableName ) ); // Table name
-            aRow.push_back( new ORowSetValueDecorator( OUString("TABLE") ) ); // Table type
+            aRow.push_back( new ORowSetValueDecorator( aTableName ) ); // Table/View name
+            if ((aTableName == "AddressBook") || (aTableName == "CollectedAddressBook"))
+            {
+                aRow.push_back( new ORowSetValueDecorator( OUString("TABLE") ) ); // Table type
+            }
+            else
+            {
+                aRow.push_back( new ORowSetValueDecorator( OUString("VIEW") ) ); // View type
+            }
             aRow.push_back( ODatabaseMetaDataResultSet::getEmptyValue() ); // Remarks
             aRows.push_back(aRow);
         }
